[B]Retrospect v5.1.6 - Changelog - 2020-01-23[/B]

This update contains a fix for VRT.nu that broken again!

[B]Framework related[/B]
-

[B]GUI/Settings/Language related[/B]
* Added: context menu to show the video info dialog (See #1288)
* Added: show "air date" as InfoLabel if a date is available

[B]Channel related[/B]
* Fixed: Most recent shows were not working for NRK.no (Fixes #1274)
* Fixed: missing video item type 'Variant' caused missing episodes (Fixes #1284)
* Updated: MTG Viafree channel - enhance look and feel (Fixes #1285)
* Fixed: VRT.nu updated some HTML pages again! (Fixes #1281)
* Fixed: SVT Live channels (Fixes #1289)
* Fixed: Missing subtitles for some videos on SVT (Fixes #1283)
* Added: More meta info to Apple Movie Trailers (Fixes #1288)
* Fixed: franchise name to NPO videos in case it differs from the main show (Fixes #1291)
* Added: seasons and episodes to items of NPO (See #1291)
* Fixed: Remove AT5 HTML tags in description (Fixes #1292)
* Fixed: Vier/Vijf/Zes.be broke (Fixes #1290)
* Fixed: UR Play broke (Fixes #1286)