@@ -3,4 +3,4 @@ sonar.exclusions=plugin.video.retrospect/resources/lib/pyscrypt/*,plugin.video.r
 #sonar.inclusions=
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.1.6
+sonar.projectVersion=5.1.7
