@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon  id="plugin.video.retrospect"
-        version="5.1.6"
+        version="5.1.7"
         name="Retrospect"
         provider-name="Bas Rieter">
 
@@ -129,18 +129,32 @@
 
         <license>CC-BY-NC-SA-4.0</license>
         <language>en nl de se no lt lv fi</language>
-        <news>[B]Retrospect v5.1.6 - Changelog - 2020-01-23[/B]
+        <news>[B]Retrospect v5.1.7 - Changelog - 2020-02-12[/B]
 
-This update contains a fix for VRT.nu that broken again!
+This update contains fixes for a number of channels (Dutch, Swedish, Belgian and Norwegian). We
+also added some small improvements such as &quot;air date&quot; infolabels and a new context menu entry to
+show the video information dialog window.
 
 [B]Framework related[/B]
 -
 
 [B]GUI/Settings/Language related[/B]
--
+* Added: context menu to show the video info dialog (See #1288)
+* Added: show &quot;air date&quot; as InfoLabel if a date is available
 
 [B]Channel related[/B]
+* Fixed: Most recent shows were not working for NRK.no (Fixes #1274)
+* Fixed: missing video item type &#x27;Variant&#x27; caused missing episodes (Fixes #1284)
+* Updated: MTG Viafree channel - enhance look and feel (Fixes #1285)
 * Fixed: VRT.nu updated some HTML pages again! (Fixes #1281)
+* Fixed: SVT Live channels (Fixes #1289)
+* Fixed: Missing subtitles for some videos on SVT (Fixes #1283)
+* Added: More meta info to Apple Movie Trailers (Fixes #1288)
+* Fixed: franchise name to NPO videos in case it differs from the main show (Fixes #1291)
+* Added: seasons and episodes to items of NPO (See #1291)
+* Fixed: Remove AT5 HTML tags in description (Fixes #1292)
+* Fixed: Vier/Vijf/Zes.be broke (Fixes #1290)
+* Fixed: UR Play broke (Fixes #1286)
         </news>
         <assets>
             <icon>resources/media/icon.png</icon>
