@@ -6,7 +6,7 @@ sonar.projectKey=Retrospect
 # sonar.login=%SONAR_TOKEN%
 
 sonar.projectName=Retrospect
-sonar.projectVersion=5.1.6
+sonar.projectVersion=5.1.7
 
 sonar.sources=.
 sonar.exclusions=plugin.video.retrospect/resources/lib/pyscrypt/*,plugin.video.retrospect/resources/lib/urllib3/**/*,plugin.video.retrospect/resources/lib/pyaes/*,plugin.video.retrospect/resources/lib/debug/**, **/*.pyc,**/*.pyo,plugin.video.retrospect/debugrun.py,plugin.video.retrospect/apiserver.py
